.card__desc-wrap - rename for correct structure

--- a/blocks/card/__desc-wrap/card__desc-wrap.css
+++ b/blocks/card/__desc-wrap/card__desc-wrap.css
@@ -1,4 +1,4 @@
-.card__desc_wrap {
+.card__desc-wrap {
   background: #fff;
   max-height: 70px;
   vertical-align: center;
